    * http://blog.rubygems.org/2017/10/09/unsafe-object-deserialization-vulnerability.html

* SecureRandom
  * New methods:
    * SecureRandom.alphanumeric

* Set
  * Add Set#to_s as alias to #inspect [Feature #13676]
  * Add Set#=== as alias to #include? [Feature #13801]
  * Add Set#reset [Feature #6589]

* StringIO
  * StringIO#write accepts multiple arguments

* WEBrick

  * Add Server Name Indication (SNI) support [Feature #13729]

* Zlib
  * Zlib::GzipWriter#write accepts multiple arguments

=== Compatibility issues (excluding feature bug fixes)

* BasicSocket#read_nonblock and BasicSocket#write_nonblock no
  longer sets the O_NONBLOCK file description flag as side effect
  (on Linux only) [Feature #13362]

* Net::HTTP
  * Net::HTTP#start now pass :ENV to p_addr by default. [Bug #13351]
    To avoid this, pass nil explicitly.

* Random.raw_seed renamed to become Random.urandom.  It is now
  applicable to non-seeding purposes due to [Bug #9569].

* Socket::Ifaddr#vhid is added [Feature #13803]

* ConditionVariable, Queue and SizedQueue reimplemented for speed.
  They no longer subclass Struct. [Feature #13552]

=== Stdlib compatibility issues (excluding feature bug fixes)

* mathn.rb
  Removed from stdlib. [Feature #10169]

* Rubygems
  * Removed "ubygems.rb" file from stdlib. It's needless since Ruby 1.9.

=== C API updates

=== Supported platform changes

* Drop to support NaCl platform
  * https://bugs.chromium.org/p/chromium/issues/detail?id=239656#c160

=== Implementation improvements

* (This might not be a "user visible feature change" but) Hash class's
  hash function is now SipHash13. [Feature #13017]

* SecureRandom now prefers OS-provided sources than OpenSSL. [Bug #9569]

* Mutex rewritten to be smaller and faster [Feature #13517]

* Performance of block passing using block parameters is improved by
  lazy Proc allocation [Feature #14045]

* Dynamic instrumentation for TracePoint hooks instead of using "trace"